# hls-bug-report-01

./: hls-foreign-lib-fail.cabal
